# codex-pet-streamdeck

./: .gitignore  README.md
capture-macos/: Package.swift  README.md
capture-macos/Sources/CodexPetCapture/: AssetRenderService.swift  AtomicFileWriter.swift  FramePublisher.swift  FrameRenderer.swift  FrameService.swift  ImageWriter.swift  ProbeConfiguration.swift  ProbeReport.swift  ScreenCaptureKitSnapshotWriter.swift  ScreenRecordingPermission.swift  SnapshotWriter.swift  StatusWriter.swift  WindowDiscovery.swift  WindowSelector.swift  main.swift
capture-macos/Sources/CodexPetMenuBar/: main.swift
docs/: architecture.md  asset-renderer-migration.md  public-readiness.md  research.md  security-review.md
renderer-rust/: Cargo.toml  README.md
renderer-rust/src/: main.rs
scripts/: README.md  build-apps.sh  clean-artifacts.sh  install.sh  open-crop-tuner.sh  open-menubar.sh  preview-crop.sh  request-screen-recording.sh  reset-screen-recording.sh  run-capture-helper.sh  set-debug.sh  set-fps.sh  start-avatar-sync.sh  start-helper.sh  status.sh  stop-helper.sh  sync-codex-avatar-frame.js  uninstall.sh
scripts/dev/: build-apps.sh  clean-artifacts.sh  open-menubar.sh
scripts/exact-sync/: open-codex-debug.sh  start-avatar-sync.sh  stop-avatar-sync.sh
scripts/internal/: run-capture-helper.sh
shared/docs/: frame-contract.md
shared/protocol/: frame-status.schema.json
streamdeck-plugin/: README.md
streamdeck-plugin/com.kousw.codex-pet.sdPlugin/: app.html  app.js  manifest.json
