[package]
name = "codex-pet-renderer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
time = { version = "0.3", features = ["formatting"] }
